# programming_in_rust

./: .gitignore  Cargo.toml  Präsentation.pptx  README.md  Rocket.toml  users.json
src/: main.rs
src/lib/: mod.rs  routes.rs  user.rs  utils.rs
templates/: base.html.tera  deleted.html.tera  failed.html.tera  index.html.tera  login.html.tera  logout.html.tera  macros.html.tera  message.html.tera  register.html.tera  success.html.tera  upload.html.tera
