[package]
name = "webserver"
version = "0.1.0"
authors = ["Xherdi Lika <likaxher@hu-berlin.de>", "Shakhriyor Nizomov <nizomovs@hu-berlin.de>", "Marcel Gregoriadis <gregorma@student.hu-berlin.de>"]
edition = "2018"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets",]  }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0.68"
